--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
   .container
-    h1 Beer Advocate
+    h1 SEARCH FOR A BEER
     .row
       .col-lg-6
         .input-group
-          input.beer_input.form-control(type='text', placeholder='SEARCH FOR A BEER')
+          input.beer_input.form-control(type='text', placeholder='BEER NAME')
           span.input-group-btn
             button.submit.btn.btn-primary(type='submit') SUBMIT
     .results-container
